# Logger

./: CMakeLists.txt  Clean.ps1  Logger.h  README.md
inc/: Logger.h  LoggerConfig.h  LoggerConfig.h.in  logger.h
src/: Logger.cpp
test/: .#LoggerUnitTest.cpp  CMakeLists.txt  LoggerUnitTest.cpp
